compression DMD working on dummy data

--- a/DMD.ipynb
+++ b/DMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,88 +25,142 @@
     "        [5, 6, 7, 8, 10],\n",
     "        [5, 6, 7, 8, 10],\n",
     "        [5, 6, 7, 8, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        ])\n",
+    "\n",
+    "D2 = np.array([\n",
+    "        [1, 2, 3, 40, 5],\n",
+    "        [5, .006, .7, 800, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        [5, .6, .7, 8, 10],\n",
+    "        [0.05, .6, 70, 8, 10],\n",
+    "        [50, 6, 7, 8, 10],\n",
+    "        [5, 6, 7, 8, 10],\n",
+    "        [5, .6, 7, 8, 10],\n",
+    "        [500, 6, 7, 8, 10],\n",
+    "        [5, 6, .7, 8, 10],\n",
     "        ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_shape = x.shape\n",
+    "data_shape = (x.shape[1], x.shape[0])\n",
     "percent_Trunc = 0.03\n",
-    "TruncVal = data_shape[0]*percent_Trunc"
+    "r = 3\n",
+    "# frame_rate = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compression matrix generation\n",
     "\n",
-    "C_gaussian = np.random.normal(0, 1, data_shape)"
+    "C_gaussian = np.random.normal(0, 1, size=data_shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compress data\n",
-    "x = x*x.T\n",
+    "\n",
     "y = np.dot(C_gaussian, x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "slice indices must be integers or None or have an __index__ method",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/kovalsky/cDMD/DMD.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/kovalsky/cDMD/DMD.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# DMD\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/kovalsky/cDMD/DMD.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m [U, S, V] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39msvd(data, full_matrices\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, compute_uv\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, hermitian\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/kovalsky/cDMD/DMD.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m U \u001b[39m=\u001b[39m U[:, \u001b[39m1\u001b[39;49m:TruncVal]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/kovalsky/cDMD/DMD.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m S \u001b[39m=\u001b[39m S[\u001b[39m1\u001b[39m:TruncVal,\u001b[39m1\u001b[39m:TruncVal]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-20.04/home/kovalsky/cDMD/DMD.ipynb#W6sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m V \u001b[39m=\u001b[39m V[:,\u001b[39m1\u001b[39m:TruncVal]\n",
-      "\u001b[0;31mTypeError\u001b[0m: slice indices must be integers or None or have an __index__ method"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# # DMD\n",
+    "\n",
+    "# [U, S, V] = np.linalg.svd(y)#, full_matrices=False, compute_uv=True, hermitian=False)\n",
+    "# # U = U[:, 0:TruncVal]\n",
+    "# # S = S[0:TruncVal+1]\n",
+    "# # V = V[:,0:TruncVal]\n",
+    "# # S = np.array(S)\n",
+    "# # S = S * np.identity(len(S))\n",
+    "# Atilde = np.dot(np.dot(U.T, D2.T).T, (V.T)) / S\n",
+    "# Atilde = np.dot(Atilde.T, Atilde)\n",
+    "# [eivVec,eivVal] = np.linalg.eig(Atilde)\n",
+    "# eivarray = np.diag(eivVal)\n",
+    "# # S = np.array(S)\n",
+    "# # S = S * np.identity(len(S))\n",
+    "# X1 = np.dot(np.dot(D2, V / (S)), eivVec) \n",
+    "# # X2 = np.reshape(mb.repmat(np.transpose(eivarray),np.size(x,1),1), (10, 1))  # unscaled modes\n",
+    "# # X3 = X1/X2\n",
+    "# # d = X3/x[:,0]  # scales\n",
+    "# # amplitude = np.absolute(d)\n",
+    "# # X=X1*np.diag(d)    #scaled mode\n",
+    "\n",
+    "# # end of DMD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# DMD\n",
     "\n",
-    "[U, S, V] = np.linalg.svd(y, full_matrices=True, compute_uv=True, hermitian=False)\n",
-    "U = U[:, 1:TruncVal]\n",
-    "S = S[1:TruncVal,1:TruncVal]\n",
-    "V = V[:,1:TruncVal]\n",
-    "Atilde = np.transpose(U) * D2 * V / S\n",
+    "[U, S, V] = np.linalg.svd(y, full_matrices=False, compute_uv=True, hermitian=False)\n",
+    "# U = U[:, 0:TruncVal]\n",
+    "# S = S[0:TruncVal+1]\n",
+    "# V = V[:,0:TruncVal]\n",
+    "# S = np.array(S)\n",
+    "# S = S * np.identity(len(S))\n",
+    "Atilde = U[:, : r].conj().T @ np.dot(D2.T, D2) @ V[: r, :].conj().T * np.reciprocal(S[: r])\n",
+    "# Atilde = np.dot(np.dot(U.T, D2.T).T, (V.T)) / S\n",
+    "Atilde = np.dot(Atilde.T, Atilde)\n",
     "[eivVec,eivVal] = np.linalg.eig(Atilde)\n",
     "eivarray = np.diag(eivVal)\n",
-    "X1 = (D2 * V / (S)* eivVec)/np.matlib.repmat(np.transpose(eivarray),np.size(D1,1),1)  # unscaled modes\n",
-    "d = X1/D1[:,1]  # scales\n",
-    "amplitude = np.absolute(d)\n",
-    "X=X1*np.diag(d)    #scaled mode\n",
+    "# S = np.array(S)\n",
+    "# S = S * np.identity(len(S))\n",
+    "# X1 = np.dot(D2 @ V[: r, :].conj().T * np.reciprocal(S[: r]), eivVec) \n",
+    "# X2 = np.reshape(mb.repmat(np.transpose(eivarray),np.size(x,1),1), (10, 1))  # unscaled modes\n",
+    "# X3 = X1/X2\n",
+    "# d = X3/x[:,0]  # scales\n",
+    "# amplitude = np.absolute(d)\n",
+    "# X=X1*np.diag(d)    #scaled mode\n",
+    "\n",
+    "sp_modes = D2 @ V[: r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec\n",
     "\n",
     "# end of DMD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_346/2542409379.py:8: RuntimeWarning: invalid value encountered in log\n",
+      "  omega = np.log(eivarray)/delta_t\n"
+     ]
+    }
+   ],
    "source": [
-    "#\n",
-    "\n",
-    "modeNorm = np.zeros(1,TruncVal)\n",
-    "for i in (1, TruncVal):\n",
-    "    modeNorm[i] = np.linalg.norm(X[:,i]) # norm of each mode\n",
+    "modeNorm = np.zeros(r)\n",
+    "for i in (0, r-1):\n",
+    "    modeNorm[i] = np.linalg.norm(X[i]) # norm of each mode\n",
     "\n",
     "mag = np.absolute(eivarray)\n",
     "weigh = mag[1:-1]/np.sum(mag)\n",
@@ -118,21 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "# #\n",
     "\n",
-    "freq1 = np.where(frequency>=0)     # eliminating negative frequencies\n",
-    "amplitude1 = amplitude[freq1]  # eliminating amplitudes corresponding to -ve frequencies\n",
-    "d1 = d[freq1]    # similar operations below for different parameters\n",
-    "omega1 = omega[freq1]\n",
-    "growth1 = growth[freq1]\n",
-    "weigh1 = weigh[freq1]\n",
-    "modeNorm1 = modeNorm[:,freq1]\n",
-    "frequency1 = frequency[freq1]\n",
-    "Xplus = X[:,freq1]"
+    "# freq1 = np.where(frequency>=0)     # eliminating negative frequencies\n",
+    "# amplitude1 = amplitude[freq1]  # eliminating amplitudes corresponding to -ve frequencies\n",
+    "# d1 = d[freq1]    # similar operations below for different parameters\n",
+    "# omega1 = omega[freq1]\n",
+    "# growth1 = growth[freq1]\n",
+    "# # weigh1 = weigh[freq1]\n",
+    "# # modeNorm1 = modeNorm[:,freq1]\n",
+    "# frequency1 = frequency[freq1]\n",
+    "# Xplus = X[:freq1]"
    ]
   }
  ],
