DMD with original data

--- a/DMD.ipynb
+++ b/DMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,54 +13,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import data\n",
-    "\n",
-    "x = np.array([\n",
-    "        [1, 2, 3, 4, 5],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        ])\n",
-    "\n",
-    "D2 = np.array([\n",
-    "        [1, 2, 3, 40, 5],\n",
-    "        [5, .006, .7, 800, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, .6, .7, 8, 10],\n",
-    "        [0.05, .6, 70, 8, 10],\n",
-    "        [50, 6, 7, 8, 10],\n",
-    "        [5, 6, 7, 8, 10],\n",
-    "        [5, .6, 7, 8, 10],\n",
-    "        [500, 6, 7, 8, 10],\n",
-    "        [5, 6, .7, 8, 10],\n",
-    "        ])"
+    "data = np.loadtxt('DMDdata200.txt', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_shape = (x.shape[1], x.shape[0])\n",
+    "x1 = data[:,:-1]\n",
+    "x2 = data[:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # import data\n",
+    "\n",
+    "# x1 = np.array([\n",
+    "#         [1, 2, 3, 4, 5],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         ])\n",
+    "\n",
+    "# x2 = np.array([\n",
+    "#         [1, 2, 3, 40, 5],\n",
+    "#         [5, .006, .7, 800, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, .6, .7, 8, 10],\n",
+    "#         [0.05, .6, 70, 8, 10],\n",
+    "#         [50, 6, 7, 8, 10],\n",
+    "#         [5, 6, 7, 8, 10],\n",
+    "#         [5, .6, 7, 8, 10],\n",
+    "#         [500, 6, 7, 8, 10],\n",
+    "#         [5, 6, .7, 8, 10],\n",
+    "#         ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_shape = (x1.shape[1], x1.shape[0])\n",
     "percent_Trunc = 0.03\n",
-    "r = 3\n",
+    "r = 10\n",
     "# frame_rate = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +90,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2000, 2000)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compress data\n",
     "\n",
-    "y = np.dot(C_gaussian, x)"
+    "y = np.dot(C_gaussian, x1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +163,7 @@
     "# V = V[:,0:TruncVal]\n",
     "# S = np.array(S)\n",
     "# S = S * np.identity(len(S))\n",
-    "Atilde = U[:, : r].conj().T @ np.dot(D2.T, D2) @ V[: r, :].conj().T * np.reciprocal(S[: r])\n",
+    "Atilde = U[:, : r].conj().T @ np.dot(x2.T, x2) @ V[: r, :].conj().T * np.reciprocal(S[: r])\n",
     "# Atilde = np.dot(np.dot(U.T, D2.T).T, (V.T)) / S\n",
     "Atilde = np.dot(Atilde.T, Atilde)\n",
     "[eivVec,eivVal] = np.linalg.eig(Atilde)\n",
@@ -138,41 +177,44 @@
     "# amplitude = np.absolute(d)\n",
     "# X=X1*np.diag(d)    #scaled mode\n",
     "\n",
-    "sp_modes = D2 @ V[: r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec\n",
+    "sp_modes = x2 @ V[: r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec\n",
     "\n",
     "# end of DMD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_346/2542409379.py:8: RuntimeWarning: invalid value encountered in log\n",
-      "  omega = np.log(eivarray)/delta_t\n"
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m modeNorm \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(r)\n\u001b[0;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m (\u001b[39m0\u001b[39m, r\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m):\n\u001b[1;32m----> 3\u001b[0m     modeNorm[i] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39mnorm(X[i]) \u001b[39m# norm of each mode\u001b[39;00m\n\u001b[0;32m      5\u001b[0m mag \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mabsolute(eivarray)\n\u001b[0;32m      6\u001b[0m weigh \u001b[39m=\u001b[39m mag[\u001b[39m1\u001b[39m:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m/\u001b[39mnp\u001b[39m.\u001b[39msum(mag)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'X' is not defined"
      ]
     }
    ],
    "source": [
-    "modeNorm = np.zeros(r)\n",
-    "for i in (0, r-1):\n",
-    "    modeNorm[i] = np.linalg.norm(X[i]) # norm of each mode\n",
+    "# modeNorm = np.zeros(r)\n",
+    "# for i in (0, r-1):\n",
+    "#     modeNorm[i] = np.linalg.norm(X[i]) # norm of each mode\n",
     "\n",
-    "mag = np.absolute(eivarray)\n",
-    "weigh = mag[1:-1]/np.sum(mag)\n",
-    "delta_t = 1/frame_rate   \n",
-    "omega = np.log(eivarray)/delta_t\n",
-    "growth = np.real(omega)\n",
-    "frequency = np.imag(omega)/(2*np.pi)"
+    "# mag = np.absolute(eivarray)\n",
+    "# weigh = mag[1:-1]/np.sum(mag)\n",
+    "# delta_t = 1/frame_rate   \n",
+    "# omega = np.log(eivarray)/delta_t\n",
+    "# growth = np.real(omega)\n",
+    "# frequency = np.imag(omega)/(2*np.pi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
