DMD and cCMD working

--- a/cDMD.ipynb
+++ b/cDMD.ipynb
@@ -48,7 +48,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)\n"
+    "# Compression matrix generation\n",
+    "\n",
+    "C_gaussian = np.random.normal(0, 1, size=data_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compress data\n",
+    "\n",
+    "y1 = np.dot(C_gaussian, x1)\n",
+    "y2 = np.dot(C_gaussian, x2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[U, S, V] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)\n"
    ]
   },
   {
@@ -93,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Atilde = U[:, : r].conj().T @ x2 @ V[:r, :].conj().T * np.reciprocal(S[: r])"
+    "Atilde = U[:, : r].conj().T @ y2 @ V[:r, :].conj().T * np.reciprocal(S[: r])"
    ]
   },
   {
