cDMD and DMD in one file

--- a/DMD.ipynb
+++ b/DMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,119 +44,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)\n"
+    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9907489736735519, 17)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sorted_S = -np.sort(-S)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.size(sorted_S)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "menergy = 0.0 #eivVal_sorted.shape\n",
-    "for i in range(0, np.size(sorted_S)):\n",
-    "    # print(i)\n",
-    "    menergy += sorted_S[i]/np.sum(sorted_S)\n",
+    "menergy = 0.0\n",
+    "for i in range(0, np.size(S)):\n",
+    "    menergy += S[i]/np.sum(S)\n",
     "    if menergy > percent_Trunc:\n",
     "        break\n",
     "    r = i\n",
     "    \n",
-    "\n",
     "menergy, r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Atilde = U[:, : r].conj().T @ x2 @ V[:r, :].conj().T * np.reciprocal(S[: r])"
+    "Atilde = U[:, : r].conj().T @ x2 @ V[:r, :].conj().T * np.reciprocal(S[: r])\n",
+    "[eivVal,eivVec] = np.linalg.eig(Atilde)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 17)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Atilde.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_10076\\973257988.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  b = np.linalg.lstsq(phi, x1[:, 0])\n"
+     ]
+    }
+   ],
    "source": [
-    "[eivVal,eivVec] = np.linalg.eig(Atilde)"
+    "phi= x2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec\n",
+    "b = np.linalg.lstsq(phi, x1[:, 0])\n",
+    "vandermodeV = np.vander(eivVal)\n",
+    "eivarray = np.diag(eivVal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.927700448533958"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "F = x2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.linalg.lstsq(F, x1[:, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vandermodeV = np.vander(eivVal)#, x1.shape[1], True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "V.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eivarray = np.diag(eivVal)\n"
+    "np.abs(b[0]).real.sum()"
    ]
   },
   {
