--- a/cDMD.ipynb
+++ b/cDMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_shape = (x1.shape[1], x1.shape[0])\n",
     "percent_Trunc = 0.99\n",
-    "frame_rate = 1/0.05\n",
-    "# r = 50"
+    "frame_rate = 1/0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,136 +54,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# compress data\n",
     "\n",
     "y1 = np.dot(C_gaussian, x1)\n",
-    "y2 = np.dot(C_gaussian, x2)\n"
+    "y2 = np.dot(C_gaussian, x2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "[U, S, V] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)\n"
+    "# cDMD\n",
+    "\n",
+    "[Uc, Sc, Vc] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9902508648017747, 16)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sorted_S = -np.sort(-S)\n"
+    "menergyc = 0.0\n",
+    "for i in range(0, np.size(Sc)):\n",
+    "    menergyc += Sc[i]/np.sum(Sc)\n",
+    "    if menergyc > percent_Trunc:\n",
+    "        break\n",
+    "    rc = i\n",
+    "    \n",
+    "menergyc, rc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.size(sorted_S)"
+    "Atildec = Uc[:, :rc].conj().T @ y2 @ Vc[:rc, :].conj().T * np.reciprocal(Sc[: rc])\n",
+    "[eivValc,eivVecc] = np.linalg.eig(Atildec)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16, 16)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Atildec.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_15764\\987746227.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  bc = np.linalg.lstsq(phic, x1[:, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "phic = x2 @ Vc[:rc, :].conj().T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
+    "bc = np.linalg.lstsq(phic, x1[:, 0])\n",
+    "vandermodeVc = np.vander(eivValc)\n",
+    "eivarrayc = np.diag(eivValc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((16,), (90824, 16), (16, 16), (16, 16))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bc[0].shape, phic.shape, vandermodeVc.shape, eivarrayc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "menergy = 0.0 #eivVal_sorted.shape\n",
-    "for i in range(0, np.size(sorted_S)):\n",
-    "    # print(i)\n",
-    "    menergy += sorted_S[i]/np.sum(sorted_S)\n",
+    "# DMD\n",
+    "\n",
+    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9907489736735519, 17)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "menergy = 0.0\n",
+    "for i in range(0, np.size(S)):\n",
+    "    menergy += S[i]/np.sum(S)\n",
     "    if menergy > percent_Trunc:\n",
     "        break\n",
     "    r = i\n",
     "    \n",
-    "\n",
     "menergy, r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Atilde = U[:, : r].conj().T @ y2 @ V[:r, :].conj().T * np.reciprocal(S[: r])"
+    "Atilde = U[:, : r].conj().T @ x2 @ V[:r, :].conj().T * np.reciprocal(S[: r])\n",
+    "[eivVal,eivVec] = np.linalg.eig(Atilde)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 17)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Atilde.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_15764\\973257988.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  b = np.linalg.lstsq(phi, x1[:, 0])\n"
+     ]
+    }
+   ],
    "source": [
-    "[eivVal,eivVec] = np.linalg.eig(Atilde)"
+    "phi= x2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec # Compute full-state modes of X\n",
+    "b = np.linalg.lstsq(phi, x1[:, 0]) # Compute amplitudes\n",
+    "vandermodeV = np.vander(eivVal) # Vandermonde matrix\n",
+    "eivarray = np.diag(eivVal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((17,), (90824, 17), (17, 17), (17, 17))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "F = x2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec"
+    "b[0].shape, phi.shape, vandermodeV.shape, eivarray.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.08750888727565637"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "b = np.linalg.lstsq(F, x1[:, 0])"
+    "# diff_nrm = np.linalg.norm(phic - phi[:, :16])\n",
+    "# n_phic = np.linalg.norm(phic)\n",
+    "np.linalg.norm(phic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.122375970338407"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vandermodeV = np.vander(eivVal)#, x1.shape[1], True)"
+    "# n_phi = np.linalg.norm(phi)\n",
+    "np.linalg.norm(phi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "V.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eivarray = np.diag(eivVal)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,21 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# menergy = 0.0 #eivVal_sorted.shape\n",
-    "# for i in range(0, np.size(eivVal_sorted)):\n",
-    "#     # print(i)\n",
-    "#     menergy += eivVal_sorted[i]/np.sum(eivVal_sorted)\n",
-    "\n",
-    "# menergy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
